# ansible

./: .ansible-lint  .gitignore  .yamllint.yml  Makefile  README.md  ansible.cfg  galaxy-requirements.yml  hosts.yml  main.yml  pyproject.toml
.github/workflows/: lint.yml
etc/: vault_secret.sh
group_vars/all/: base.yml  me.yml  vault.yml
host_vars/dck-par.trickey.uk/: authentik.yml  docker.yml
roles/authentik/files/: docker-compose.yml
roles/authentik/tasks/: main.yml
roles/authentik/vars/: vault.yml
roles/base/files/sudoers.d/: nopasswd
roles/base/handlers/: main.yml
roles/base/tasks/: firewall.yml  main.yml  sudo.yml
roles/base/templates/firewall/: base.conf  dck-par.trickey.uk.conf  hyp-par.trickey.uk.conf
roles/docker_cleanup/tasks/: main.yml
roles/incus/handlers/: main.yml
roles/incus/tasks/: main.yml
roles/netbox/files/: configuration.py  docker-compose.override.yml
roles/netbox/handlers/: main.yml
roles/netbox/tasks/: main.yml
roles/netbox/vars/: vault.yml
roles/prometheus/files/: docker-compose.yml  prometheus.yml
roles/prometheus/handlers/: main.yml
roles/prometheus/tasks/: main.yml
roles/tandoor/files/: docker-compose.yml
roles/tandoor/tasks/: main.yml
roles/tandoor/vars/: vault.yml
roles/traefik/files/: docker-compose.yml  traefik.yml
roles/traefik/tasks/: main.yml
roles/traefik/vars/: vault.yml
roles/vikunja/files/: config.yml  docker-compose.yml
roles/vikunja/tasks/: main.yml
roles/vikunja/vars/: vault.yml
