[tool.poetry]
name = "dgt-ansible"
version = "0.1.0"
description = ""
authors = ["Dan Trickey <git@trickey.io>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
ansible = "^10"

[tool.poetry.group.dev.dependencies]
ansible-lint = {version = "^24", markers = "platform_system != 'Windows'"}
yamllint = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
